<resources>
    <string name="app_name">Semester-Project-Crypto-Wallet</string>
    <string name="transactionsButton">Transactions</string>
    <string name="paymentButton">Payment</string>
    <string name="create_new_pair">Create New Pair</string>
    <string name="create_account">Create Account</string>
    <string name="balanceTextView">Zostatok</string>
    <string name="signInButton">Sign In</string>
    <string name="destinationEditText">Destination</string>
    <string name="contactsButton">Contacts</string>
    <string name="sendButton">Send</string>
    <string name="amountEditText">Amount</string>
    <string name="title">Stellar wallet</string>
    <string name="showTransactionsButton">showTransactions</string>
    <string name="stellarWallet">Stellar Wallet</string>
    <string name="generateButton">Generate</string>
    <string name="numeric_password">PIN</string>
    <string name="confirm">Confirm</string>
    <string name="registerText">Register</string>
    <string name="logo_stellar_wallet">Logo Stellar Wallet</string>
    <string name="addContact">Add Contact</string>
    <string name="generate">Generate</string>
    <string name="publicKey">Public Key</string>
    <string name="privateKey">Private Key</string>
    <string name="log_out">Log out</string>
    <string name="contactName">Name of contact</string>
    <string name="contacts">Contacts</string>
    <string name="xlm">XLM %1$s</string>
    <string name="name">Name:</string>
    <string name="public_key">Public Key:</string>
    <string name="sourceTV">Source:</string>
    <string name="destinationTV">Destination:</string>
    <string name="amountTV">Amount:</string>
    <string name="payment_feeTV">Payment fee:</string>
    <string name="payment_idTV">Payment ID</string>
    <string name="publicKeyTV">Public Key:</string>
    <string name="privateKeyTV">Private Key:</string>
</resources>