<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <data>
        <variable
            name="loggedInModel"
            type="com.example.semester_project_crypto_wallet.ui.logged_in.LoggedInViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@drawable/stellar_logo"
            android:contentDescription="@string/logo_stellar_wallet"
            app:layout_constraintBottom_toTopOf="@+id/balanceTextView">

        </ImageView>
        <TextView
            android:id="@+id/balanceTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="120dp"
            android:paddingStart="0dp"
            android:paddingEnd="10dp"
            android:text="@string/balanceTextView"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="30sp"
            app:layout_constraintBottom_toTopOf="@+id/transactionsButton"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <Button
            android:id="@+id/transactionsButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="100dp"
            android:text="@string/transactionsButton"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/balanceTextView" />

        <Button
            android:id="@+id/addContactButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/contactsButton"
            android:layout_marginTop="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/transactionsButton" />

        <Button
            android:id="@+id/paymentButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/paymentButton"
            android:layout_marginTop="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/addContactButton" />
        <Button
            android:id="@+id/loggedOutButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/log_out"
            android:layout_marginTop="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/paymentButton" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
