<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <data>
        <variable
            name="registerModel"
            type="com.example.semester_project_crypto_wallet.ui.register.RegisterViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/registerTextView"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:paddingTop="10dp"
            android:text="@string/signInButton"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="30sp"
            app:layout_constraintTop_toTopOf="parent"
            tools:layout_editor_absoluteX="46dp"/>

        <View
            android:id="@+id/divider"
            android:layout_width="409dp"
            android:layout_height="1dp"
            android:background="?android:attr/listDivider"
            android:backgroundTint="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/registerTextView"/>

        <TextView
            android:id="@+id/publicKeyText"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:layout_marginTop="10dp"
            android:contentDescription="@string/publicKey"
            android:ems="15"
            android:animateLayoutChanges="true"
            android:text="@{registerModel.publicKeyStr}"
            android:textColor="@color/white"
            android:textIsSelectable="true"
            app:layout_constraintStart_toStartOf="@+id/publicKeyTextView"
            app:layout_constraintTop_toBottomOf="@+id/publicKeyTextView" />

        <TextView
            android:id="@+id/privateKeyText"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:layout_marginTop="10dp"
            android:contentDescription="@string/privateKey"
            android:ems="15"
            android:text="@{registerModel.privateKeyStr}"
            android:textColor="@color/white"
            android:textIsSelectable="true"
            app:layout_constraintStart_toStartOf="@+id/publicKeyTextView"
            app:layout_constraintTop_toBottomOf="@+id/privateKeyTextView" />

        <Button
            android:id="@+id/generateKeys"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/generate"
            android:layout_marginTop="20dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/registerTextView"/>

        <EditText
            android:id="@+id/passwordEditText"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_marginTop="30dp"
            android:ems="4"
            android:hint="@string/numeric_password"
            android:importantForAutofill="no"
            android:inputType="numberPassword"
            android:maxEms="4"
            android:maxLength="4"
            android:text="@={registerModel.pin}"
            android:textAlignment="center"
            android:textColorHint="@color/white"
            android:textColor="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/generateKeys"/>

        <Button
            android:id="@+id/confirmRegister"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/registerText"
            android:layout_marginTop="30dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/passwordEditText"/>

        <TextView
            android:id="@+id/publicKeyTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="90dp"
            android:layout_marginTop="30dp"
            android:text="@string/publicKeyTV"
            android:textColor="@color/white"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/divider" />

        <TextView
            android:id="@+id/privateKeyTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/privateKeyTV"
            android:textColor="@color/white"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="@+id/publicKeyTextView"
            app:layout_constraintTop_toBottomOf="@+id/publicKeyText" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
