<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <data>
        <variable
            name="paymentsModel"
            type="com.example.semester_project_crypto_wallet.ui.payments.PaymentsViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <TextView
            android:id="@+id/balanceTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingEnd="10dp"
            android:paddingStart="0dp"
            android:text="@string/balanceTextView"
            android:textAlignment="textEnd"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/sendButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="500dp"
            android:text="@string/sendButton"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/balanceTextView" />

        <Button
            android:id="@+id/contactsButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/contactsButton"
            app:layout_constraintEnd_toEndOf="@+id/amountEditText"
            app:layout_constraintTop_toBottomOf="@+id/amountEditText" />

        <EditText
            android:id="@+id/amountEditText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:ems="10"
            android:hint="@string/amountEditText"
            android:inputType="numberDecimal"
            android:importantForAutofill="no"
            android:minHeight="48dp"
            app:layout_constraintEnd_toEndOf="@+id/destinationEditText"
            app:layout_constraintStart_toStartOf="@+id/destinationEditText"
            app:layout_constraintTop_toBottomOf="@+id/destinationEditText"/>

        <EditText
            android:id="@+id/destinationEditText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="200dp"
            android:ems="10"
            android:hint="@string/destinationEditText"
            android:inputType="textPersonName"
            android:importantForAutofill="no"
            android:minHeight="48dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.502"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/balanceTextView"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
