<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/borders_recycler_view">


    <TextView
        android:id="@+id/textViewS"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginTop="5dp"
        android:textSize="22sp"
        android:text="@string/sourceTV"
        android:textColor="@color/logoGreen"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textViewD"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:textSize="22sp"
        android:text="@string/destinationTV"
        android:textColor="@color/logoGreen"
        app:layout_constraintStart_toStartOf="@+id/textViewS"
        app:layout_constraintTop_toBottomOf="@+id/textView_source" />

    <TextView
        android:id="@+id/textViewA"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:textSize="22sp"
        android:text="@string/amountTV"
        android:textColor="@color/logoGreen"
        app:layout_constraintStart_toStartOf="@+id/textViewS"
        app:layout_constraintTop_toBottomOf="@+id/textView_destination" />

    <TextView
        android:id="@+id/textViewI"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:textSize="22sp"
        android:text="@string/payment_idTV"
        android:textColor="@color/logoGreen"
        app:layout_constraintStart_toStartOf="@+id/textViewS"
        app:layout_constraintTop_toBottomOf="@+id/textView_amount" />

    <TextView
        android:id="@+id/textView_source"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:textSize="22sp"
        android:paddingEnd="20dp"
        android:paddingStart="20dp"
        android:textColor="@color/white"
        app:layout_constraintStart_toStartOf="@+id/textViewS"
        app:layout_constraintTop_toBottomOf="@+id/textViewS" />

    <TextView
        android:id="@+id/textView_destination"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:textSize="22sp"
        android:paddingEnd="20dp"
        android:paddingStart="20dp"
        android:textColor="@color/white"
        app:layout_constraintStart_toStartOf="@+id/textViewD"
        app:layout_constraintTop_toBottomOf="@+id/textViewD" />

    <TextView
        android:id="@+id/textView_amount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:textSize="22sp"
        android:paddingEnd="20dp"
        android:paddingStart="20dp"
        android:textColor="@color/white"
        app:layout_constraintStart_toStartOf="@+id/textViewA"
        app:layout_constraintTop_toBottomOf="@+id/textViewA" />

    <TextView
        android:id="@+id/textView_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:textSize="22sp"
        android:paddingEnd="20dp"
        android:paddingStart="20dp"
        android:textColor="@color/white"
        app:layout_constraintStart_toStartOf="@+id/textViewI"
        app:layout_constraintTop_toBottomOf="@+id/textViewI" />
</androidx.constraintlayout.widget.ConstraintLayout>